# trading

./: .tool-versions  README.md  app.py  candle_stick_patterns.py  justfile  nifty_symbols_csv.py  pyproject.toml  risk_reward_calc.py  script.py  volume_checker.py
calendar-spread/: app.py  fetch_futures_entities.py  futures_data.py  nse_api.py
calendar_spread/: app.py  futures_data.py  nse_api.py
calendar_spread/cache/: AARTIIND.json  ABB.json  ABCAPITAL.json  ABFRL.json  ACC.json  ADANIENSOL.json  ADANIENT.json  ADANIGREEN.json  ADANIPORTS.json  ALKEM.json  AMBUJACEM.json  ANGELONE.json  APLAPOLLO.json  APOLLOHOSP.json  APOLLOTYRE.json  ASHOKLEY.json  ASIANPAINT.json  ASTRAL.json  ATGL.json  AUBANK.json  AUROPHARMA.json  AXISBANK.json  BAJAJ-AUTO.json  BAJAJFINSV.json  BAJFINANCE.json  BALKRISIND.json  BANDHANBNK.json  BANKBARODA.json  BANKINDIA.json  BEL.json  BERGEPAINT.json  BHARATFORG.json  BHARTIARTL.json  BHEL.json  BIOCON.json  BOSCHLTD.json  BPCL.json  BRITANNIA.json  BSE.json  BSOFT.json  (+175 more)
components/: __init__.py  risk_calculator.py  volume_analyzer.py
data/: ind_nifty100list.csv  ind_nifty200list.csv  nifty_indices.json
pages/: 01_spread.py  02_pattern.py
tests/: __init__.py  conftest.py  test_risk_reward.py
