[tool.poetry]
name = "nse-trading-strategies"
version = "0.1.0"
description = "NSE Trading Strategies application with multiple strategies"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "calendar_spread"}]

[tool.poetry.dependencies]
python = ">=3.9, !=3.9.7, <4.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
streamlit = "^1.24.0"
requests = "^2.32.3"
nsepythonserver = "^2.93"
# Required for handling NSE API's Brotli-compressed responses
brotli = "^1.1.0"
plotly = "^6.0.1"
yfinance = "^0.2.54"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 80

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
